# AeroMesh

./: .gitignore  README.md  aeromesh.py  driver.py  pyproject.toml  readthedocs.yml  schema.yaml  setup.py
.pytest_cache/v/cache/: nodeids
aeromesh/: __init__.py  driver.py
docs/: docreqs.txt
docs/source/: conf.py  developer.rst  index.rst  parameters.rst  starting.rst  user.rst
requirements/: environment.yml  environments.yml  req.txt
src/: functions2D.py  functions3D.py  refines.py  structures.py  terrain.py
tests/: test_functions2D.py  test_functions3D.py  test_terrain.py
tests/outfiles/: out_terrain2D.vtk  out_terrain3D.vtk  out_terrain3D_default.vtk
tests/testcases/: case_terrain3D_default.vtk
