[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "AeroMesh"
version = "0.0.9"
authors = [
  { name="Adrian Gushin", email="Adrian.Gushin@nrel.gov" },
]
description = "A customizable mesher for wind farm simulations and analysis."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "BSD-3-Clause"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/NREL/AeroMesh"
Issues = "https://github.com/NREL/AeroMesh/issues"